--- a/css/main.css
+++ b/css/main.css
@@ -79,36 +79,6 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-menu-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  width: 40px;
-  height: 40px;
-  border: transparent;
-  background-color: #ffffff;
-  cursor: pointer;
-}
-
-.mobile-menu-button__icon {
-  width: 40px;
-  height: 40px;
-}
-
-.mobile-menu-button:hover .mobile-menu-button__icon,
-.mobile-menu-button:focus .mobile-menu-button__icon {
-  fill: #2196f3;
-}
-
-@media screen and (min-width: 768px) {
-  .mobile-menu-button {
-    display: none;
-  }
-}
-
 .base-section {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1671,27 +1641,136 @@ ul {
   padding: 40px;
 }
 
-.mobile-menu-window {
+.mobile-menu-button,
+.mobile-menu-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  line-height: 0;
+}
+
+.mobile-menu-close-btn {
+  padding: 11px;
+}
+
+.mobile-menu {
   position: fixed;
-  top: 0;
   left: 0;
-  z-index: 100;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
+  top: 0;
   background-color: #ffffff;
+  width: 100vw;
+  height: 100vh;
+  max-height: 796px;
+  overflow-y: scroll;
+  transform: translateY(-100%);
+  transition: transform 500ms linear;
+}
+
+.mobile-menu.is-open {
+  transform: translateY(0%);
+}
+
+.mobile-menu-container {
+  position: relative;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 41px;
+  padding-right: 41px;
+}
+
+.mobile-menu-button__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+}
+
+.mobile-menu-list {
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  margin-bottom: 302px;
+}
+
+.mobile-menu-list__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu-list__link {
+  text-decoration: none;
+  color: #212121;
+}
+
+.mobile-menu-list__link:hover,
+.mobile-menu-list__link:focus {
+  color: #2196f3;
+}
+
+.mobile-menu__contacts {
+  margin-bottom: 64px;
+}
+
+.mobile-menu__contact-link {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #757575;
+}
+
+.mobile-menu__contact-link:hover,
+.mobile-menu__contact-link:focus {
+  font-size: 40px;
+  text-decoration: none;
+  color: #2196f3;
+}
+
+.mobile-menu__contact:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__link:hover,
+.mobile-menu__link:focus {
+  color: #2196f3;
+  font-size: 40px;
+}
+
+.mobile-menu__social-list {
+  display: flex;
+  justify-content: flex-start;
+  margin-left: -10px;
+}
+
+.mobile-menu__social-list-item {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.mobile-menu__social-list-item:not(:last-child) {
+  border-right: 1px solid #757575;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.mobile-menu__social-list-item-link {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
 }
 
 @media screen and (min-width: 768px) {
-  .mobile-menu-window {
+  .mobile-menu-button {
     display: none;
   }
-}
-
-@media screen and (min-width: 1200px) {
-  .mobile-menu-window {
+  .mobile-menu {
     display: none;
   }
 }
