--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,34 @@ ul {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .base-section--hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-bg.png");
+    background-size: cover;
+    background-color: #c4c4c4;
+    color: #ffffff;
+  }
+  .hero__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 700px;
+  }
+  .hero__title {
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-align: center;
+    text-transform: uppercase;
+  }
+}
+
 .section-title {
   font-weight: 700;
   font-size: 28px;
@@ -466,8 +494,93 @@ ul {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .features__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+  .features__list-item {
+    width: calc((100% - 4 * 30px) / 4);
+    margin-top: 30px;
+    margin-left: 30px;
+  }
+  .features__list-item::before {
+    content: '';
+    display: block;
+    height: 120px;
+    border-radius: 4px;
+    margin-bottom: 30px;
+    background-color: #f5f4fa;
+    background-repeat: no-repeat;
+    background-size: 70px 70px;
+    background-position: 50% 50%;
+  }
+  .features__list-item--with-antenna::before {
+    background-image: url("../images/antenna.svg");
+  }
+  .features__list-item--with-clock::before {
+    background-image: url("../images/clock.svg");
+  }
+  .features__list-item--with-diagram::before {
+    background-image: url("../images/diagram.svg");
+  }
+  .features__list-item--with-astronaut::before {
+    background-image: url("../images/astronaut.svg");
+  }
+  .features__list-item-title {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    text-align: left;
+  }
+  .features__list-item-description {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 14px;
+    line-height: 1.71;
+    color: #757575;
+  }
+}
+
 .base-section--services {
   display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .base-section--services {
+    padding-top: 0;
+  }
+  .services-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+  .services-list__item {
+    position: relative;
+    margin-top: 30px;
+    margin-left: 30px;
+    width: calc((100% - 3 * 30px) / 3);
+  }
+  .services-list__title {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    margin: 0;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    font-size: 14px;
+    line-height: 1.17;
+    text-align: center;
+    text-transform: uppercase;
+    color: #ffffff;
+    background-color: rgba(47, 48, 58, 0.8);
+  }
 }
 
 .base-section--team {
@@ -534,7 +647,12 @@ ul {
 
 .social-links__item:not(:last-child) {
   margin-right: 10px;
-  margin-bottom: 30px;
+}
+
+@media screen and (max-width: 767px) {
+  .social-links__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .social-links__item-link {
@@ -580,6 +698,86 @@ ul {
   }
   .team-list__item {
     width: calc((100% - 2 * 30px) / 2);
+    margin-left: 30px;
+    margin-top: 30px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+  .team-list_item-description {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-right: 30px;
+    padding-left: 30px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background-color: #ffffff;
+  }
+  .team-list__item-name {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.17;
+    text-align: center;
+  }
+  .team-list__item-position {
+    margin-top: 0;
+    margin-bottom: 16px;
+    font-size: 16px;
+    line-height: 1.17;
+    text-align: center;
+    color: #757575;
+  }
+  .social-links {
+    display: flex;
+    justify-content: center;
+  }
+  .social-links__item {
+    display: flex;
+  }
+  .social-links__item-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: transparent;
+  }
+  .social-links__item-link:hover, .social-links__item-link:focus {
+    background-color: #2196f3;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .social-links__item-link:hover .social-links__item-icon, .social-links__item-link:focus .social-links__item-icon {
+    background-color: #2196f3;
+    fill: #ffffff;
+    transition-property: background-color, fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .social-links__item-icon {
+    width: 20px;
+    height: 20px;
+    fill: #afb1b8;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .base-section--team {
+    background-color: #f5f4fa;
+  }
+  .team-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+  .team-list__item {
+    width: calc((100% - 4 * 30px) / 4);
     margin-left: 30px;
     margin-top: 30px;
     border-bottom-left-radius: 4px;
@@ -701,6 +899,46 @@ ul {
     margin-left: 30px;
     margin-top: 30px;
     width: calc((100% - 3 * 30px) / 3);
+  }
+  .regular-customers__item-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 92px;
+    border-radius: 4px;
+    border: 1px solid #afb1b8;
+  }
+  .regular-customers__item-link:hover, .regular-customers__item-link:focus {
+    border-color: #2196f3;
+    transition-property: border-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .regular-customers__item-link:hover .regular-customers__item-logo, .regular-customers__item-link:focus .regular-customers__item-logo {
+    fill: #2196f3;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .regular-customers__item-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: #afb1b8;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .regular-customers {
+    display: flex;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+  .regular-customers__list-item {
+    margin-left: 30px;
+    margin-top: 30px;
+    width: calc((100% - 6 * 30px) / 6);
   }
   .regular-customers__item-link {
     display: flex;
@@ -934,6 +1172,123 @@ ul {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
+    width: calc((100% - 30px) / 2);
+  }
+  .footer-content_left-side-right-part-accept {
+    margin-top: 0;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+    line-height: 1.17;
+  }
+  .footer-social-links {
+    display: flex;
+  }
+  .footer-social-links_item-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+  .footer-social-links_item-link:hover, .footer-social-links_item-link:focus {
+    background-color: #2196f3;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .footer-social-links_item:not(:last-child) {
+    margin-right: 10px;
+  }
+  .footer-social-links_item-icon {
+    width: 20px;
+    height: 20px;
+    fill: #ffffff;
+  }
+  .footer-content_right-side-text {
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    text-align: center;
+    color: #ffffff;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-content {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    font-size: 14px;
+    line-height: 1.71;
+    color: #ffffff;
+    background-color: #2f303a;
+  }
+  .footer-content__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: baseline;
+  }
+  .footer-content_left-side {
+    display: flex;
+    flex-direction: row;
+    justify-content: baseline;
+    align-items: center;
+    margin-bottom: 60px;
+    width: calc((100% - 30px) / 2);
+  }
+  .footer-content_right-side {
+    width: calc((100% - 30px) / 2);
+  }
+  .footer-content_left-side-left-part {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 60px;
+    width: calc((100% - 30px) / 2);
+    /* margin-right: 86px; */
+  }
+  .footer-content__logo {
+    margin-bottom: 20px;
+    color: #ffffff;
+  }
+  .address-text {
+    margin-top: 0;
+    font-style: normal;
+  }
+  .address-text_info {
+    margin-top: 0;
+    margin-bottom: 8px;
+  }
+  .footer-contacts-list__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  .footer-contacts-list__item-link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: rgba(255, 255, 255, 0.6);
+    font-style: normal;
+    text-decoration: none;
+  }
+  .footer-contacts-list__item-link:hover, .footer-contacts-list__item-link:focus {
+    color: #2196f3;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .footer-mail {
+    margin-bottom: 6px;
+  }
+  .footer-content_left-side-right-part {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     width: calc((100% - 30px) / 2);
   }
