--- a/css/main.css
+++ b/css/main.css
@@ -1233,24 +1233,19 @@ ul {
   .footer-content__wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: baseline;
+    justify-content: space-between;
+    align-items: baseline;
   }
   .footer-content_left-side {
     display: flex;
-    flex-direction: row;
-    justify-content: baseline;
-    align-items: center;
-    margin-bottom: 60px;
+    align-items: baseline;
+    justify-content: space-between;
     width: calc((100% - 30px) / 2);
   }
   .footer-content_right-side {
     width: calc((100% - 30px) / 2);
   }
   .footer-content_left-side-left-part {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 60px;
     width: calc((100% - 30px) / 2);
     /* margin-right: 86px; */
   }
@@ -1264,15 +1259,12 @@ ul {
   }
   .address-text_info {
     margin-top: 0;
-    margin-bottom: 8px;
+    margin-bottom: 9px;
   }
   .footer-contacts-list__item:not(:last-child) {
     margin-bottom: 10px;
   }
   .footer-contacts-list__item-link {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     color: rgba(255, 255, 255, 0.6);
     font-style: normal;
     text-decoration: none;
@@ -1287,9 +1279,6 @@ ul {
     margin-bottom: 6px;
   }
   .footer-content_left-side-right-part {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     width: calc((100% - 30px) / 2);
   }
   .footer-content_left-side-right-part-accept {
@@ -1333,7 +1322,7 @@ ul {
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    text-align: center;
+    text-align: left;
     color: #ffffff;
   }
 }
@@ -1438,6 +1427,67 @@ ul {
   }
   .footer-form__base-button {
     align-self: center;
+    padding-top: 10px;
+    padding-right: 28px;
+    padding-bottom: 10px;
+    padding-left: 28px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    color: #ffffff;
+    background-color: #2196f3;
+  }
+  .footer-form__base-button:hover, .footer-form__base-button:focus {
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #188ce8;
+  }
+  .footer-form__base-button::after {
+    display: block;
+    content: '';
+    width: 24px;
+    height: 24px;
+    margin-left: 10px;
+    background-image: url("../images/icon-send.svg");
+    background-size: contain;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form__input {
+    width: 358px;
+    height: 50px;
+    padding-top: 16px;
+    padding-right: 15px;
+    padding-bottom: 16px;
+    padding-left: 15px;
+    margin: 0;
+    border-radius: 4px;
+    border: 1px solid #757575;
+    background-color: transparent;
+    color: #ffffff;
+  }
+  .footer-form__input:focus {
+    outline: none;
+    color: #ffffff;
+    border: 1px solid #2196f3;
+    background-color: transparent;
+  }
+  .footer-form__input:focus:not(:placeholder-shown):invalid {
+    border: 1px solid rgba(255, 0, 0, 0.3);
+  }
+  .footer-form__input:focus:not(:placeholder-shown):valid {
+    border: 1px solid rgba(0, 255, 0, 0.3);
+  }
+  .footer-form__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .footer-form__base-button {
     padding-top: 10px;
     padding-right: 28px;
     padding-bottom: 10px;
