--- a/css/main.css
+++ b/css/main.css
@@ -2046,6 +2046,220 @@ ul {
   padding: 40px;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 528px;
+    padding: 40px;
+  }
+  .modal-form__header {
+    margin-top: 0;
+    margin-bottom: 12px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-align: center;
+  }
+  .modal-form__field {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: #757575;
+  }
+  .modal-form__field + .modal-form__field {
+    margin-top: 10px;
+  }
+  .modal-form__field-content {
+    display: block;
+    position: relative;
+    margin-top: 4px;
+  }
+  .modal-form__input {
+    display: block;
+    width: 100%;
+    height: 40px;
+    margin: 0;
+    padding-left: 42px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-right: 12px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+  }
+  .modal-form__input:focus {
+    outline: none;
+    border-color: #2196f3;
+  }
+  .modal-form__input:focus + .modal-form__field-icon {
+    fill: #2196f3;
+  }
+  .modal-form__input:focus:not(:placeholder-shown):invalid {
+    border: 1px solid rgba(255, 0, 0, 0.3);
+  }
+  .modal-form__input:focus:not(:placeholder-shown):valid {
+    border: 1px solid rgba(0, 255, 0, 0.3);
+  }
+  .modal-form__field-icon {
+    position: absolute;
+    top: 25%;
+    left: 12px;
+    width: 18px;
+    height: 18px;
+  }
+  .modal-form__message {
+    display: block;
+    resize: none;
+    height: 120px;
+    padding-top: 12px;
+    padding-right: 16px;
+    padding-bottom: 12px;
+    padding-left: 16px;
+    margin-top: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+  }
+  .modal-form__message:focus {
+    outline: none;
+    border-color: #2196f3;
+  }
+  .modal-form__message::placeholder {
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
+  .modal-form__checkbox-link {
+    color: #2196f3;
+  }
+  /* =============================================CUSTOM CHECKBOX========================================== */
+  .modal-form__checkbox-label {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    /* line-height: 1.71; */
+    line-height: 1;
+    color: #757575;
+  }
+  .modal-form__checkbox-label::before {
+    display: block;
+    content: '';
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+    margin-right: 8px;
+    border-radius: 2px;
+    border: 2px solid #212121;
+  }
+  .modal-form__checkbox:checked + .modal-form__checkbox-label::before {
+    background-image: url("../images/icon-checkbox.svg");
+    background-color: #2196f3;
+    border: transparent;
+  }
+  .modal-form__checbox-wrapper {
+    position: relative;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .modal-form__checkbox {
+    position: absolute;
+    bottom: 0;
+    left: 10px;
+  }
+  /* =============================================CUSTOM CHECKBOX========================================== */
+  .modal-form__base-button {
+    margin-top: 30px;
+    padding-top: 10px;
+    padding-right: 56px;
+    padding-bottom: 10px;
+    padding-left: 56px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    color: #ffffff;
+    background-color: #2196f3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
+  .modal-form__base-button:hover, .modal-form__base-button:focus {
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #188ce8;
+  }
+  .backdrop-mobile {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    transition-property: opacity;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+  .backdrop-mobile.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+  .modal-window-mobile {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    background-color: #ffffff;
+  }
+  .close-btn-mobile {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    right: 8px;
+    top: 8px;
+    background: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  .close-btn-mobile:hover .close-btn__icon {
+    fill: #2196f3;
+  }
+  .close-btn-mobile__icon {
+    width: 11px;
+    height: 11px;
+  }
+  .modal-form-mobile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+  }
+}
+
 .mobile-menu-button,
 .mobile-menu-close-btn {
   position: absolute;
