--- a/sass/layout/_sec-hero.scss
+++ b/sass/layout/_sec-hero.scss
@@ -7,7 +7,18 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url('../images/mobile/hero-bg.png');
+    url('../images/hero/hero-mobile.jpg');
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        90deg,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url('../images/hero/hero-mobile2x.jpg');
+  }
   background-size: cover;
 
   background-color: $background-hero;
@@ -45,7 +56,19 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url('../images/tablet/hero-bg.png');
+      url('../images/hero/hero-tablet.jpg');
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          90deg,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url('../images/hero/hero-tablet2x.jpg');
+    }
+
     background-size: cover;
 
     background-color: $background-hero;
@@ -85,7 +108,19 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url('../images/hero-bg.png');
+      url('../images/hero/hero-desktop.jpg');
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          90deg,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url('../images/hero/hero-desktop2x.jpg');
+    }
+
     background-size: cover;
 
     background-color: $background-hero;
