--- a/css/main.css
+++ b/css/main.css
@@ -94,10 +94,16 @@ ul {
 .base-section--hero {
   padding-top: 118px;
   padding-bottom: 118px;
-  background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/mobile/hero-bg.png");
+  background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-mobile.jpg");
   background-size: cover;
   background-color: #c4c4c4;
   color: #ffffff;
+}
+
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .base-section--hero {
+    background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-mobile2x.jpg");
+  }
 }
 
 .hero__wrapper {
@@ -123,11 +129,20 @@ ul {
   .base-section--hero {
     padding-top: 118px;
     padding-bottom: 118px;
-    background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/tablet/hero-bg.png");
+    background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-tablet.jpg");
     background-size: cover;
     background-color: #c4c4c4;
     color: #ffffff;
   }
+}
+
+@media scrren and (min-width: 768px) and (min-device-pixel-ratio: 2), scrren and (min-width: 768px) and (min-resolution: 192dpi), scrren and (min-width: 768px) and (min-resolution: 2dppx) {
+  .base-section--hero {
+    background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-tablet2x.jpg");
+  }
+}
+
+@media scrren and (min-width: 768px) {
   .hero__wrapper {
     display: flex;
     flex-direction: column;
@@ -151,11 +166,20 @@ ul {
   .base-section--hero {
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-bg.png");
+    background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-desktop.jpg");
     background-size: cover;
     background-color: #c4c4c4;
     color: #ffffff;
   }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .base-section--hero {
+    background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-desktop2x.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .hero__wrapper {
     display: flex;
     flex-direction: column;
