--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -343,6 +343,7 @@
 
   .footer-content_left-side-left-part {
     width: calc((100% - 30px) / 2);
+    margin-bottom: 0;
     /* margin-right: 86px; */
   }
 
